constraints/resource-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sResourceLimits
metadata:
  name: require-resources
spec:
  match:
  kinds:
  - apiGroups: [""]
    kinds: ["Pod"]
  - apiGroups: ["apps"]
    kinds: ["Deployment"]
